Revise to use URI instead of URL.